; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_config.c_check_argc.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_config.c_check_argc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [40 x i8] c"wrong number of arguments, should be %d\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"wrong number of arguments, should be from %d to %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32)* @check_argc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_argc(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp sge i32 %7, %8
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp sle i32 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  br label %30

15:                                               ; preds = %10, %3
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %6, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = call i32 (i8*, ...) bitcast (i32 (...)* @_ to i32 (i8*, ...)*)(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %21 = load i32, i32* %5, align 4
  %22 = call i32 (i32, i32, ...) bitcast (i32 (...)* @error to i32 (i32, i32, ...)*)(i32 %20, i32 %21)
  br label %28

23:                                               ; preds = %15
  %24 = call i32 (i8*, ...) bitcast (i32 (...)* @_ to i32 (i8*, ...)*)(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0))
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* %6, align 4
  %27 = call i32 (i32, i32, i32, ...) bitcast (i32 (...)* @error to i32 (i32, i32, i32, ...)*)(i32 %24, i32 %25, i32 %26)
  br label %28

28:                                               ; preds = %23, %19
  %29 = call i32 (...) @usage_builtin_config()
  br label %30

30:                                               ; preds = %28, %14
  ret void
}

declare dso_local i32 @error(...) #1

declare dso_local i32 @_(...) #1

declare dso_local i32 @usage_builtin_config(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
